# healthos

./: .env.example  .gitignore  AGENT_PROMPT.md  DEPLOYMENT_HANDBOOK.md  README.md  docker-compose.yml  start-local.ps1
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/healthos_api/: __init__.py  cli.py  config.py  crypto.py  database.py  main.py  models.py  schemas.py  security.py
apps/api/healthos_api/routes/: __init__.py  activities.py  admin.py  auth.py  experiments.py  garmin.py  health.py  imports.py  insights.py  manual_events.py  metrics.py  recommendations.py
apps/api/healthos_api/services/: agents.py  fitnesssyncer.py  garmin.py  metrics.py
apps/api/healthos_api/worker/: __init__.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_import_batches.py
apps/api/tests/: test_agents.py  test_fitnesssyncer.py  test_metrics.py
apps/web/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/lib/: api.ts
docs/: implementation.md  operations.md
docs/n8n/: fitnesssyncer-import.md
infra/caddy/: Caddyfile
infra/db/: init.sql
samples/: fitnesssyncer_mock.csv
