[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthos-api"
version = "0.1.0"
description = "FastAPI backend for Personal Health OS"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "celery>=5.4.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.34",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["healthos_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
